Fixed img stretching by adding height: auto

--- a/styles/aisCommon.css
+++ b/styles/aisCommon.css
@@ -2755,10 +2755,11 @@ div.HubFullDisplay table tr th.AdjudicationEnabled input {
 {
   border: 0;
   position: absolute;
-  position: absolute;top: 50%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   max-width: 70%;
+  height: auto;
 }
 #ProgramBadges .BadgeIconDescription {
   border: 0;
